# Devchain

./: Cargo.toml  Dockerfile  LICENSE  README.md  devchain.json  devchain_state.json
.github/workflows/: release.yml
frontend/: visualizer.html  visualizer.js
github/workflows/: release.yml
src/: api.rs  app_state.rs  cli.rs  main.rs  p2p.rs
src/challenges/: all_challenges.rs  challenge_trait.rs  mod.rs  verifier.rs
src/core_types/: blockchain.rs  mod.rs  transaction.rs
src/gamification/: badges.rs  guilds.rs  mod.rs  profile.rs  skills.rs
src/oracle/: docker_verifier.rs  mod.rs
src/vm/: executor.rs
