[package]
name = "devchain_full"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.52", features = ["full"] }
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
